Projeto final desktop

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link"> home</a>
-            <a class="cabecalho__menu__link">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html"> home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -47,7 +47,7 @@
                 </a> 
             </div>
         </section>
-        <img class="apresentacao_edit__imagem" src="assets/Foto VII.jpg" alt="Foto do Paulo Maia">       
+        <img class="apresentacao_edit__imagem" src="assets/Foto V.jpg" alt="Foto do Paulo Maia">       
     </main>
     <footer class="rodape">
         <p>Desenvolvido por:  Paulo Maia</p>        
